# sistemas-de-tiempo-real

./: .clangd  .gdbinit  .mxproject  CMakeLists.txt  README.md  STM32H533xx_FLASH.ld  STM32H533xx_RAM.ld  make.sh  stlink.sh  str.ioc
App/Inc/: button.h  desafio10.h  desafio2_1.h  desafio2_2.h  desafio5.h  desafio7.h  desafio8.h  desafio9.h  desafio_queue.h  my_main.h
App/Src/: button.c  desafio10.c  desafio2_1.c  desafio2_2.c  desafio5.c  desafio7.c  desafio8.c  desafio9.c  desafio_queue.c  my_main.c
Core/Inc/: FreeRTOSConfig.h  main.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h  stm32h5xx_nucleo_conf.h
Core/Src/: app_freertos.c  gpio.c  icache.c  main.c  stm32h5xx_hal_msp.c  stm32h5xx_hal_timebase_tim.c  stm32h5xx_it.c  tim.c
Drivers/BSP/STM32H5xx_Nucleo/: stm32h5xx_nucleo.c  stm32h5xx_nucleo.h
cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
